--- a/bibliography.html
+++ b/bibliography.html
@@ -13,7 +13,7 @@
 <div id="sources">
 	<p>Alvarado, Elisabeth. “Selena Quintanilla Biography and Quotes.” Spanish Mama, 13 Sept. 2021, <a href="https://spanishmama.com/selena-quintanilla-biography-and-quotes/."> spanishmama/Selena</a>  </p>
 	<p> Editors, Biography.com. “Selena Quintanilla.” Biography.com Networks Television, 2 Apr. 2014, <a href= "https://www.biography.com/musician/selena."> biography.com/Selena </a>  </p>
-	<a href="index2.0.html"> Back to home page:</a>
+	<a href="index.html"> Back to home page:</a>
 
 </div>
 
